@@ -1,3 +1,8 @@
+2024-11-30 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/pdk/ralloc2.cc:
+	  pdk stack allocation improvement.
+
 2024-11-29 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/f8/gen.c,
